fix attempt for x scroll on mobile

--- a/assets/scss/core/_base.scss
+++ b/assets/scss/core/_base.scss
@@ -1,14 +1,15 @@
 body {
-    color: $white;
+    position: relative;
 
-    // overflow-y: hidden;
+    overflow-y: hidden;
     overscroll-behavior-y: none;
     overscroll-behavior-block: none;
-
+    
     &.isScrollEnable {
         overflow-y: scroll;
     }
-
+    
+    color: $white;
     font-family: $regular;
 }
 
