--- a/assets/scss/headers/_header-home.scss
+++ b/assets/scss/headers/_header-home.scss
@@ -5,8 +5,6 @@
 
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);//100vh on mobile devices
-
-    transition: height .5s ease-in-out;
 }
 
 .header-home__container {
