--- a/assets/scss/pages/_page-home.scss
+++ b/assets/scss/pages/_page-home.scss
@@ -1,6 +1,8 @@
 .page-home {
     position: relative;
 
+    width: 100vw;
+
     background-color: $darkGrey;
 
     & * {
